--- a/StrankaDleVlastnihoTematu.html
+++ b/StrankaDleVlastnihoTematu.html
@@ -29,7 +29,7 @@
             <li> Predmet </li>
             <li> Predmet </li>
         </ol>
-        <table style="width:100%">
+        <table width="100" border="1px solid black">
             <thead class="blackstyle">
                 <tr>
                     <th> Jmeno </th>
